# NUCLEO-H503-MasterController-Zephyr

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  prj.conf  west.yml
boards/: nucleo_h503rb.overlay
include/: can.h  file_op.h  main_state.h  message.h  save_data_thread.h  sim7600_at_cmd.h  sim7600_driver.h
include/upload_thread/: upload_state.h  upload_thread.h
src/: can.c  file_op.c  main.c  main_state.c  message.c  save_data_thread.c  sim7600_driver.c
src/upload_thread/: upload_state.c  upload_thread.c
